--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     </header>
     <main>
         <div class="gallery">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="images/pexels-david-kittel-838409.jpg" alt="david kittel" loading="lazy">
+            <img src="images/pexels-elina-sazonova-2072599.jpg" alt="elina sazonova" loading="lazy">
+            <img src="images/pexels-helena-lopes-3764464.jpg" alt="helene lopes" loading="lazy">
+            <img src="images/pexels-lennart-wittstock-316776.jpg" alt="lenhart wittstock" loading="lazy">
+            <img src="images/pexels-liz-tremblay-631297.jpg" alt="liz tremblay" loading="lazy">
+            <img src="images/pexels-melissa-corless-1108129.jpg" alt="melissa corles" loading="lazy">
+            <img src="images/pexels-pille-kirsi-1009408.jpg" alt="pille kirsi" loading="lazy">
+            <img src="images/pexels-pixabay-208806.jpg" alt="pixabay" loading="lazy">
+            <img src="images/pexels-pixabay-257577.jpg" alt="pixabay" loading="lazy">
         </div>
     </main>
     
